<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="83dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:paddingTop="83dp">

    <LinearLayout
        android:id="@+id/layout_select_bucket"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite6"
        android:orientation="vertical"
        android:paddingBottom="9.5dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bucket_hint"
            android:textColor="@color/colorBlack6"
            android:textSize="16sp" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/layout_refresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/bucket_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>
        </android.support.v4.widget.SwipeRefreshLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_create_bucket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/create_bucket"
                android:textColor="@color/colorPink4"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/colorPink4"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="33dp"
                android:text="@string/confirm"
                android:textColor="@color/colorPink4"
                android:textSize="14sp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_create_bucket"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite6"
        android:orientation="vertical"
        android:paddingBottom="9.5dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_title"
            android:textColor="@color/colorBlack6"
            android:textSize="16sp" />
        
        <EditText
            android:id="@+id/inputer_bucket_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack7"
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            android:hint="@string/bucket_name"
            android:background="@color/colorGray5"/>

        <EditText
            android:id="@+id/inputer_bucket_describe"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColorHint="@color/colorBlack7"
            android:layout_marginTop="12dp"
            android:gravity="top"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="14sp"
            android:hint="@string/bucket_describe"
            android:background="@color/colorGray5"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_cancel_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/cancel"
                android:textColor="@color/colorPink4"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/text_confirm_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="33dp"
                android:layout_gravity="center_vertical"
                android:text="@string/confirm"
                android:textColor="@color/colorPink4"
                android:textSize="14sp" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>