<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="false">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="297dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="249dp"
            app:contentScrim="@color/colorPink4"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:statusBarScrim="@color/colorPink3">

            <ImageView
                android:id="@+id/top_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                app:layout_collapseMode="parallax"
                android:background="@color/colorBlack2"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseParallaxMultiplier="0.7" />
            <View
                android:id="@+id/top_cover"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorShadow1"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                app:layout_collapseMode="parallax">

                <FrameLayout
                    android:id="@+id/layout_fans"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_fans_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8.5dp"
                        android:text="0"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30.5dp"
                        android:text="@string/fans"
                        android:textColor="@color/colorGray2"
                        android:textSize="12sp" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/layout_attention"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_attention_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8.5dp"
                        android:text="0"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30.5dp"
                        android:text="@string/followings"
                        android:textColor="@color/colorGray2"
                        android:textSize="12sp" />
                </FrameLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="147.5dp"
                app:layout_collapseMode="parallax">

                <TextView
                    android:id="@+id/text_user_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/text_user_describe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="30dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/colorGray2"
                    android:textSize="12sp" />
            </FrameLayout>

            <TextView
                android:id="@+id/text_login_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="162.5dp"
                android:textSize="14sp"
                android:text="@string/login_hint"
                android:textColor="@color/colorWhite1"/>
            
            <Button
                android:id="@+id/button_login"
                android:layout_width="105dp"
                android:layout_height="36dp"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/colorWhite1"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="205.5dp"
                android:text="@string/title_login"
                android:background="@drawable/shape_login_button"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tool_bar_height"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin">

                <com.lihonghui.vinci.common.widget.view.CircleImageView
                    android:id="@+id/image_avatar_mini"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/avatar_default"
                    android:layout_marginLeft="16dp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/text_user_nickname_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        />

                    <View
                        android:id="@+id/icon_search"
                        android:layout_width="17.5dp"
                        android:layout_height="17.5dp"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="55.5dp"
                        android:background="@mipmap/search" />
                <FrameLayout
                    android:id="@+id/layout_more"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right|center_vertical">
                    <View
                        android:layout_width="4dp"
                        android:layout_height="16dp"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="16dp"
                        android:background="@mipmap/more" />
                </FrameLayout>

                </FrameLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/personal_tab_height"
            android:layout_gravity="bottom"
            app:tabIndicatorColor="@color/colorWhite1"
            app:tabIndicatorHeight="2dp"
            app:tabSelectedTextColor="@color/colorWhite"
            app:tabTextColor="@color/colorGray1"
            android:background="@color/colorBlack3">

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <com.lihonghui.vinci.common.widget.view.CircleImageView
        android:id="@+id/image_avatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="75.5dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="center_horizontal"
        android:background="@drawable/avatar_default"
        app:layout_behavior="com.lihonghui.vinci.user.personal.behavior.AvatarBehavior" />

    <android.support.v4.view.ViewPager
        android:id="@+id/personal_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack2"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </android.support.v4.view.ViewPager>

</android.support.design.widget.CoordinatorLayout>